index.css
body {
    margin: 0px;
    background-color: #DADADA;
    font-size: 18px;
    line-height: 1.5;
}

#header {
    width: 100%;
    height: 50px;
    padding: 10px;
    background-color: #C0C0C0;
}

#body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 15px;
}

.tab {
    margin-right: 50px;
}

.section {
    max-width: 800px;
    text-align: justify;
}

.line {
    max-width: 800px;
    border-bottom-color: black;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    width: 100%;
}

.title {
    margin-top: 100px;
}

.subtitle {
    max-width: 800px;
    width: 100%;
    margin-top: 20px;
}

.section{
    margin-top: 10px
}

.map {
    max-width: 800px;
    width: 100%;
    background-color: white;
}

.stat {
    max-width: 600px;
    width: 100%;
    background-color: white;
}

.result {
    max-width: 800px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.figdesc {
    font-size: 12px;
    margin-top: -7px;
}

.refs {
    max-width: 800px;
}

.ref {
    max-width: 800px;
    padding: 5px;
}

.stats {
    max-width: 600px;
}

